- Add Job - Edit Job - Deactivate Job

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -201,7 +201,20 @@
     <string name="education_level">مستوى التعليم</string>
     <string name="job_type">نمط العمل</string>
     <string name="deactivate">إلغاء تفعيل</string>
-    <string name="applied_before">لقد قمت بالتقدم مسبقاٌ لهذه الوظيفة</string>
+    <string name="applied_before">قدمت مسبقاً</string>
+    <string name="applied_success">تم إرسال طلبك بنجاح</string>
+    <string name="base_info">المعلومات الأساسية</string>
+    <string name="name_ar">الاسم(العربية)</string>
+    <string name="name_en">الاسم(الانكليزية</string>
+    <string name="description_ar">التوصيف(العربية)</string>
+    <string name="description_en">التوصيف(الانكليزية)</string>
+    <string name="responsibilities_ar">المسؤوليات(العربية)</string>
+    <string name="responsibilities_en">المسؤوليات(الانكليزية)</string>
+    <string name="qualifications_ar">المؤهلات(العربية)</string>
+    <string name="qualifications_en">المؤهلات(الانكليزية)</string>
+    <string name="job_added">تم إضافة العمل بنجاح</string>
+    <string name="job_deactived">تم إلغاء تفعيل هذه الوظيفة بنجاح</string>
+    <string name="job_edited">تم تعديل الوظيفة بنجاح</string>
 
 
 </resources>
