Many issues fixed. Market and products added.

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -223,6 +223,7 @@
     <string name="newspaper">الجريدة</string>
     <string name="my_products">منتجاتي</string>
     <string name="add_new_product">إضافة منتج جديد </string>
+    <string name="price">السعر</string>
 
 
 </resources>
